try to fix overlap in footer

--- a/site/css/grids.css
+++ b/site/css/grids.css
@@ -137,7 +137,7 @@
 
 @media print {
 
-    table,th {
+    table,th, tr, tfoot {
         position: relative !important;
     }
 
